force-app/main/default/objects/Quickbook_Connection__c/Quickbook_Connection__c.object-meta.xml
<CustomObject>
    <label>Quickbook Connection</label>
    <nameField>
        <label>Quickbook Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbook Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>