force-app/main/default/objects/Quickbook_Connection__c/fields/Access_Token_Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Expires_In__c</fullName>
    <label>Access Token Expires In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>