force-app/main/default/objects/Quickbook_Connection__c/fields/Token_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Updated_At__c</fullName>
    <label>Token Updated At</label>
    <type>DateTime</type>
</CustomField>